assignments/PA4/tests/bad/bad16.cl
class Main {
    x():Int{2};
    main(x:Int):Int{1};
};
